# Arm_kinematics

./: .gitmodules  CMakeLists.txt  README.md  test-python.ipynb
src/: pollen_kinematics.cpp  pollen_kinematics.hpp  reachy.cpp
src/kdl/: config.h
src/kdl/models/: models.hpp  puma560.cpp  reachy.cpp
